--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,55 @@
  * work well for content-centric websites.
  */
 
+@font-face {
+  font-family: 'Smiley Sans';
+  font-style: oblique 6deg;
+  font-weight: 500;
+  src: url('/fonts/SmileySans-Oblique.ttf.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 200;
+  src: url('/fonts/Oswald-ExtraLight.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/fonts/Oswald-Light.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/Oswald-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/fonts/Oswald-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 600;
+  src: url('/fonts/Oswald-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/fonts/Oswald-Bold.woff2') format('woff2');
+}
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
@@ -14,6 +63,9 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --ifm-font-size-base: 125%;
+  --ifm-heading-font-family: Oswald, 'Smiley Sans', sans-serif;
+  --ifm-heading-font-weight: 500;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -27,4 +79,18 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.hero__title {
+  font-size: 5rem;
+}
+
+.navbar {
+  font-family: Oswald, 'Smiley Sans', sans-serif;
+  font-style: oblique 6deg;
+  font-size: 1.2rem;
+}
+
+.navbar__link {
+  font-weight: var(--ifm-font-weight-normal);
 }
