fix: fix extra "格式" prefix shown for inline InsnFormatName elements

--- a/src/components/AsmDB/bits.module.css
+++ b/src/components/AsmDB/bits.module.css
@@ -19,7 +19,7 @@
   --bit-fg-p6: var(--bit-palette-p6);
 }
 
-.insnFormatTag::before {
+.showFormatPrefix::before {
   content: '格式 ';
   font-family: 'Smiley Sans';
   color: var(--bit-palette-opcode);
