--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -21,6 +21,10 @@
   padding: 0;
 }
 
+.project__name::before {
+  content: ' ';
+}
+
 .project__goodSince {
   color: var(--ifm-color-emphasis-200);
 }
