feat: highlight likely non-CN-domestic links
As many more readers without stable connectivity to those sites are
going to appear soon, after the transition to CN-based CDN serving,
let's help them by hinting at the possible cause behind seemingly broken
connectivity.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -121,3 +121,10 @@ small {
   /* same as the "function" highlighting class in our dark code theme */
   color: rgb(80, 250, 123);
 }
+
+.link--overseas::after {
+  content: '🌍';
+  vertical-align: super;
+  font-size: 75%;
+  word-break: keep-all;
+}
