--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -10,42 +10,42 @@
   font-family: 'Oswald';
   font-style: normal;
   font-weight: 200;
-  src: url('/fonts/Oswald-ExtraLight.woff2') format('woff2');
+  src: local('Oswald') url('/fonts/Oswald-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
   font-weight: 300;
-  src: url('/fonts/Oswald-Light.woff2') format('woff2');
+  src: local('Oswald') url('/fonts/Oswald-Light.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/Oswald-Regular.woff2') format('woff2');
+  src: local('Oswald') url('/fonts/Oswald-Regular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
   font-weight: 500;
-  src: url('/fonts/Oswald-Medium.woff2') format('woff2');
+  src: local('Oswald') url('/fonts/Oswald-Medium.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
   font-weight: 600;
-  src: url('/fonts/Oswald-SemiBold.woff2') format('woff2');
+  src: local('Oswald') url('/fonts/Oswald-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
   font-weight: 700;
-  src: url('/fonts/Oswald-Bold.woff2') format('woff2');
+  src: local('Oswald') url('/fonts/Oswald-Bold.woff2') format('woff2');
 }
 
 /* You can override the default Infima variables here. */
