--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,48 +5,7 @@
  */
 
 @import url('/fonts/smiley-sans/font.css');
-
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 200;
-  src: local('Oswald') url('/fonts/Oswald-ExtraLight.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Oswald') url('/fonts/Oswald-Light.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Oswald') url('/fonts/Oswald-Regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Oswald') url('/fonts/Oswald-Medium.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Oswald') url('/fonts/Oswald-SemiBold.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Oswald') url('/fonts/Oswald-Bold.woff2') format('woff2');
-}
+@import url('./oswald.css');
 
 /* You can override the default Infima variables here. */
 :root {
