feat: use normal font for the search component
without this, the .navbar styles will get inherited by the search
component, leading to results in Smiley Sans which is ugly and against
Smiley Sans' usage recommendations.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -87,6 +87,12 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.2rem;
 }
 
+.navbar__search {
+  font-family: var(--ifm-font-family-base);
+  font-style: normal;
+  font-size: 1rem;
+}
+
 .navbar__link {
   font-weight: var(--ifm-font-weight-normal);
 }
