--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,6 +21,8 @@
   --ifm-heading-font-family: Oswald, 'Smiley Sans', sans-serif;
   --ifm-heading-font-weight: 400;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --awly-font-family-emph: 'Noto Serif', serif, 'Times New Roman', 'Source Han Serif', '思源宋体', '宋体', 'SimSun', 'Noto Color Emoji', 'Apple Color Emoji', 'Segoe UI Emoji';
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -123,4 +125,11 @@ small {
   vertical-align: super;
   font-size: 75%;
   word-break: keep-all;
+}
+
+em {
+  font-family: var(--awly-font-family-emph);
+  font-style: normal;
+  text-emphasis-style: dot;
+  text-emphasis-position: under right;
 }
