feat(asmdb): show aliases for some notable opcodes

--- a/src/components/AsmDB/index.module.css
+++ b/src/components/AsmDB/index.module.css
@@ -1,3 +1,11 @@
 .decodeTreeView {
   border: 1px solid var(--ifm-color-secondary-contrast-background);
 }
+
+.attrib::before {
+  content: ' ';
+}
+
+.attrib {
+  color: var(--ifm-color-gray-700);
+}
