feat(asmdb): show decodetree bitfields in asmdb design

--- a/src/components/AsmDB/bits.module.css
+++ b/src/components/AsmDB/bits.module.css
@@ -1,5 +1,6 @@
-.widget {
+:root {
   --bit-palette-opcode: var(--ifm-color-emphasis-200);
+  --bit-palette-undecided: var(--ifm-color-emphasis-100);
   --bit-palette-p1: #feb30b;
   --bit-palette-p2: #66ccff;
   --bit-palette-p3: #90d408;
@@ -37,6 +38,7 @@
   font-family: var(--ifm-font-family-monospace);
 
   --bit-bg-p0: var(--bit-palette-opcode);
+  --bit-bg-undecided: var(--bit-palette-undecided);
   --bit-bg-p1: var(--bit-palette-p1);
   --bit-bg-p2: var(--bit-palette-p2);
   --bit-bg-p3: var(--bit-palette-p3);
