--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -127,7 +127,7 @@ small {
   word-break: keep-all;
 }
 
-em {
+em.cjk {
   font-family: var(--awly-font-family-emph);
   font-style: normal;
   text-emphasis-style: dot;
