--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,9 +22,9 @@
   --ifm-heading-font-weight: 400;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
-  --awly-font-family-emph: 'Noto Serif', serif, 'Times New Roman',
-    'Source Han Serif', '思源宋体', '宋体', 'SimSun', 'Noto Color Emoji',
-    'Apple Color Emoji', 'Segoe UI Emoji';
+  --awly-font-family-emph:
+    'Noto Serif', serif, 'Times New Roman', 'Source Han Serif', '思源宋体',
+    '宋体', 'SimSun', 'Noto Color Emoji', 'Apple Color Emoji', 'Segoe UI Emoji';
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
